--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,800;1,900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+body, header, footer, main, section, div, ul, li, input, button, figure, a, p, span, h1, h2, h3, h4, h5, h6, img {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
+html, body {
+    height: 100%;
+    font-family: 'Poppins', 'Roboto', sans-serif;
+}
+.corpoConteudo{
+    max-width: 1300px;
+    margin: 0 auto;
+    background-color: #E5E5E5;
+}
+#next{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.corpoPaginas {
+    /*padding: 10px 0 30px;*/
+    flex: 1 0 auto;
+}
+.container-grid {
+    max-width: 1250px;
+    margin: 0 auto;
+}
+.txt-thr {
+    text-decoration: line-through;
+}
+.d-flex {
+    display: flex;
+}
+
+.d-flex-between{
+    justify-content: space-between;
+}
+.alignItems-center {
+    align-items: center;
+}
+.row {
+    margin: 0 auto;
+}
