atualização pagina login

--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -1,1 +1,42 @@
-<p>login works!</p>
+<div class="container-grid">
+    <div class="tituloForm"><i class="fas fa-user"></i> <h2>Identificação</h2></div>
+    <div class="contForm d-flex">
+        <section class="formLogin">
+            <form>
+                <h2>Já Tenho cadastro</h2>
+                <div class="grupoInputs">
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email:</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Senha:</label>
+                    </div>
+                    <div class="btnGroupEntar">
+                        <button class="btnEntrar" type="submit"><i class="fas fa-sign-in-alt"></i> Entrar</button>
+                    </div>
+                </div>
+            </form>
+
+            <div class="btnsEsqueci">
+                <div class="btn-Esq">Esqueci meu Email</div>
+                <div class="btn-Esq">Esqueci minha Senha</div>
+            </div>
+            <hr>
+            <div class="loginRedesSociais">
+                <h4>Quero acessar com minhas redes sociais</h4>
+                <div class="botoes">
+                    <div class="btnDivisao"><button class="btnFacebook" type="submit"><i class="fab fa-facebook-f"></i> <span>Entrar com o Facebook</span></button></div>
+                    <button class="btnGoogle" type="submit"><i class="fab fa-google"></i> <span>Entrar com o Google</span></button>
+                </div>
+            </div>
+        </section>
+
+        <div class="linhaForm"></div>
+        
+        <section class="formCadastro">
+
+        </section>
+    </div>
+</div>
