--- a/src/app/views/template/home/home.component.html
+++ b/src/app/views/template/home/home.component.html
@@ -8,27 +8,7 @@
     <section class="principaisOfertas">
         <div class="container-grid">
             <div class="row">
-                <div class="cardProduto">
-                    <header>
-                        <div class="cardProdutoClassificacao">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <i class="far fa-star"></i>
-                        </div>
-                        <img src="./assets/img/cad-foto.jpg" alt="">
-                    </header>
-                    <div>
-                        <div class="cardProdutoInfo">
-                            <h3 class="produto_titulo">Processador Intel Core i7-9700F, Cache 12MB....</h3>
-                            <span class="txt-thr">De: R$ 2.000,00</span>
-                            <strong>Por: R$ 1.500,00</strong> 
-                            <span>a vista ou no boleto</span>
-                        </div>
-                        <a class="btnPagamento" href="produto.html"><div>Comprar</div><i class="fas fa-shopping-cart"></i></a>
-                    </div>
-                </div><!-- end cardProduto -->
+                <app-card-produto></app-card-produto>
             </div><!-- end row -->
             <a class="maisOfertas" href="#">Mais Ofertas</a>
         </div>
